--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@semicolondsm/ui": "^1.3.12",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
