--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@semicolondsm/react-emotion-theme": "^1.0.10",
     "@semicolondsm/ui": "^1.3.12",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "emotion-reset": "^3.0.1",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
