--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Dependencies
-      run: npm install
+      run: yarn install --immutable --immutable-cache --check-cache
     
     - name: Build
-      run: npm run build
+      run: yarn dev
