⚡️:: (#16) yarn dev -> yarn build로 변경

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,4 +18,4 @@ jobs:
       run: yarn install --immutable --immutable-cache --check-cache
     
     - name: Build
-      run: yarn dev
+      run: yarn build
