--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,20 +2,24 @@ name: "Next CI"
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Clone repository
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Install Dependencies
-      run: yarn install --immutable --immutable-cache --check-cache
-    
-    - name: Build
-      run: yarn build
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: "yarn"
+
+      - name: Install Dependencies
+        run: yarn install --immutable --immutable-cache --check-cache
+
+      - name: Build
+        run: yarn build
