--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@semicolondsm/ui": "^1.3.12",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
+    "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.1",
     "emotion-reset": "^3.0.1",
     "next": "13.1.2",
+    "next-cookies": "^2.0.3",
     "react": "18.2.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "typescript": "4.9.4"
