--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.2",
-    "@reduxjs/toolkit": "^1.9.1",
+    "@reduxjs/toolkit": "^1.9.2",
     "@semicolondsm/react-emotion-theme": "^1.0.10",
     "@semicolondsm/ui": "^1.3.12",
     "@types/node": "18.11.18",
@@ -27,6 +27,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
+    "react-redux": "^8.0.5",
     "typescript": "4.9.4"
   }
 }
