--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-cookies": "^0.1.1",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "typescript": "4.9.4"
