--- a/.github/workflows/xquare-deploy.yml
+++ b/.github/workflows/xquare-deploy.yml
@@ -34,3 +34,11 @@ jobs:
           environment: prod
           access_key: ${{ secrets.TEACHER_ACCESS }}
           github_token: ${{ secrets.PICK_ACCESS_TOKEN }}
+
+      - name: generate .env file
+        run: |
+          echo "NEXT_PUBLIC_PICK_BASE_URL=$NEXT_PUBLIC_PICK_BASE_URL" >> .env
+          echo "NEXT_PUBLIC_HTTP_ONLY=$NEXT_PUBLIC_HTTP_ONLY" >> .env
+        env:
+          NEXT_PUBLIC_PICK_BASE_URL: ${{secrets.NEXT_PUBLIC_PICK_BASE_URL}}
+          NEXT_PUBLIC_HTTP_ONLY: ${{secrets.NEXT_PUBLIC_HTTP_ONLY}}
