📌 :: xquare-deploy 수정

--- a/.github/workflows/xquare-deploy.yml
+++ b/.github/workflows/xquare-deploy.yml
@@ -1,4 +1,5 @@
 name: Xquare Deploy for Production
+
 on:
   push:
     branches: [main]
@@ -20,6 +21,14 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Generate Environment Variables File for Production
+        run: |
+          echo "NEXT_PUBLIC_PICK_BASE_URL=$NEXT_PUBLIC_PICK_BASE_URL" >> .env
+          echo "NEXT_PUBLIC_HTTP_ONLY=$NEXT_PUBLIC_HTTP_ONLY" >> .env
+        env:
+          NEXT_PUBLIC_PICK_BASE_URL: ${{ secrets.NEXT_PUBLIC_PICK_BASE_URL }}
+          NEXT_PUBLIC_HTTP_ONLY: ${{ secrets.NEXT_PUBLIC_HTTP_ONLY }}
+
       - name: Cache node modules
         uses: actions/cache@v2
         with:
@@ -34,11 +43,3 @@ jobs:
           environment: prod
           access_key: ${{ secrets.TEACHER_ACCESS }}
           github_token: ${{ secrets.PICK_ACCESS_TOKEN }}
-
-      - name: generate .env file
-        run: |
-          echo "NEXT_PUBLIC_PICK_BASE_URL=$NEXT_PUBLIC_PICK_BASE_URL" >> .env
-          echo "NEXT_PUBLIC_HTTP_ONLY=$NEXT_PUBLIC_HTTP_ONLY" >> .env
-        env:
-          NEXT_PUBLIC_PICK_BASE_URL: ${{secrets.NEXT_PUBLIC_PICK_BASE_URL}}
-          NEXT_PUBLIC_HTTP_ONLY: ${{secrets.NEXT_PUBLIC_HTTP_ONLY}}
